--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -28,7 +28,7 @@
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <img src="images/mbt3.jpeg" alt="Yves Klein">
+                    <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
                 </div>
             </nav>
         </header>
@@ -39,7 +39,9 @@
                 <div class="mainT">
                     <h3 class="mainTitL">Portrait d'Yves Klein</h3>
                     <p class="mainTxtL">
-                        Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley<br>"The Heartbeat of France"
+                        Portrait d'Yves Klein réalisé à<br>
+                        l'occasion du tournage de Peter Morley<br>
+                        "The Heartbeat of France"
                     </p>
                 </div>
                 <div class="mainImg2"></div>
@@ -53,8 +55,9 @@
             <div class="mainR">
                 <div class="mainImgR"></div>
                 <div class="mainT">
-                    <h3 class="mainImgmainTitR">Peinture de Feu sans titre</h3>
-                    <p class="mainTxtR">Yves Klein's gesture evokes a man's
+                    <h3 class="mainImgmainTitR">Yves Klein réalisant une Peinture de Feu</h3>
+                    <p class="mainTxtR">Peinture de Feu sans titre<br>
+                        Yves Klein's gesture evokes a man's<br>
                         fantasy of controlling and mastering fire.</p>
                     </div>
                     <div class="mainImg2 R"></div>
@@ -130,9 +133,9 @@
                     </ul>
                 </div>
                 <nav class="footCbx">
-                    <div class="menu menu1"><a href="#">Artist</a></div>
-                    <div class="menu menu2"><a href="#">Exhibition</a></div>
-                    <div class="menu menu3"><a href="#">News</a></div>
+                    <div class="menu menu1"><a href="#">ARTIST</a></div>
+                    <div class="menu menu2"><a href="#">EXHIBITION</a></div>
+                    <div class="menu menu3"><a href="#">NEWS</a></div>
                     <!-- <div class="menu menu4"><a href="#">made</a></div> -->
                     <div class="menu menu4"><a href="outro.html">EXIT</a></div>
                 </nav>
