--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapBox">
         <header class="header">
-            <h1 class="title mainH1"><a href="#">KLEIN BLUE</a></h1>
+            <h1 class="title mainH1"><a href="index.html">KLEIN BLUE</a></h1>
             <h2 class="title subH2">ARTIST</h2>
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
@@ -28,27 +28,79 @@
                 </div>
             </nav>
         </header>
-        <section class="art1">
-            <h1>The beginnings of blue</h1>
-            <div class="aWrap">
+        <main class="art1">
+            <!-- <h1>The beginnings of blue</h1> -->
+            <section class="aWrap">
                 <div class="yves">
                     <img src="images/mbt3.JPG" alt="이브클랭 사진">
                 </div>
                 <div class="info">
                     <ul class="inT">
                         <li>
-                            <em>NAME : </em><i>Yves Klein</i>
+                            <em>NAME : </em><br>
+                            <i>Yves Klein</i>
                         </li>
                         <li>
-                            <em>BIRTH PLACE : </em><i>France</i>
+                            <em>BIRTH PLACE : </em><br>
+                            <i>France</i>
                         </li>
                         <li>
-                            <em>DATE OF BIRTH : </em><i>1928.04.28 ~ 1962.06.06</i>
+                            <em>DATE OF BIRTH : </em><br>
+                            <i>1928.04.28 ~ 1962.06.06</i>
                         </li>
                     </ul>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section class="bWrap">
+                <p>
+                    Yves Klein, né le 28 avril 1928 à Nice, avait pour première vocation d'être judoka. En 1954, il se tourne définitivement vers l'art et entame son « Aventure monochrome ».<br><br>
+                    Animé par l’idée consistant à « libérer la couleur de la prison de la ligne », Yves Klein se tourne vers la monochromie car c’est pour lui la seule manière de peindre permettant de « voir ce que l’absolu avait de visible ».<br><br>
+                    Privilégiant l’expression de la sensibilité plus que la figuration dans la forme, Yves Klein va au-delà de toute représentation artistique et conçoit l'œuvre d'art comme la trace de la communication de l'artiste avec le monde. C'est la réalité invisible qui devient visible. Ses œuvres sont « les cendres de son art ».<br><br>
+                    L'œuvre d'Yves Klein révèle une conception nouvelle de la fonction de l'artiste. Selon lui, la beauté existe déjà, à l'état invisible. Sa tâche consiste à la saisir partout où elle est, dans l'air et dans la matière. Yves Klein a fait de sa vie tout entière une œuvre d’art : "L’art est partout où l’artiste arrive."<br><br>
+                    Dans sa quête d’immatérialité et d’infini, Yves Klein adopte le bleu outremer comme véhicule. De ce bleu plus que bleu, qu’il nommera « IKB » (International Klein Blue), irradie une vibration colorée qui n’engage pas seulement le regard du spectateur : c’est l’esprit qui voit avec les yeux.<br><br>
+                    De ses monochromes, au vide, à la "technique des pinceaux vivants" ou "Anthropométrie", jusqu'à l'emploi des éléments de la nature afin de manifester leur force créatrice ou de l’or qu’il utilise comme un passage vers l’absolu, il a conçu une œuvre qui traverse les frontières de l'art conceptuel, corporel et du happening.<br><br>
+                    Juste avant de mourir, Yves Klein confie à un ami : "Je vais entrer dans le plus grand atelier du monde. Et je n'y ferai que des œuvres immatérielles."<br><br>
+                    Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
 
+                </p>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="footInfo">
+                <div class="footLbx">
+                    <ul>
+                        <li><span>LANGUAGE : </span><button type="button">FRANÇAIS</button></li>
+                        <li>CREATED BY <i>BOSEONG KANG</i></li>
+                        <li>CONTACT : 010-3362-1793</li>
+                    </ul>
+                </div>
+                <nav class="footCbx">
+                    <div class="menu menu1"><a href="#">ARTIST</a></div>
+                    <div class="menu menu2"><a href="#">EXHIBITION</a></div>
+                    <div class="menu menu3"><a href="#">NEWS</a></div>
+                    <!-- <div class="menu menu4"><a href="#">made</a></div> -->
+                    <div class="menu menu4"><a href="index.html">EXIT</a></div>
+                </nav>
+                <div class="footRbx">
+                    <div class="snsWrap">
+                        <div class="snsTit">FOLLOW US</div>
+                        <div class="sns">
+                            <div class="insta"><a href="#">instagram</a></div>
+                            <div class="faceb"><a href="#">facebook</a></div>
+                            <div class="yutub"><a href="#">youtube</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <ul>
+                    <li>RETOUCHED PHOTOGRAPHS</li>
+                    <li>COPYRIGHT 2023-2024 AMERICAN VINTAGE</li>
+                    <li>ALL RIGHTS RESERVED</li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
