--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -7,7 +7,7 @@
     <title>KLEIN BLUE</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/common.css">
 
 </head>
@@ -16,12 +16,12 @@
     <!------------------------------------------------- header ------------------------------------------------->
     <div class="wrapBox">
         <header class="header">
-            <h1 class="title mainH1"><a href="#">KLEIN BLUE</a></h1>
+            <h1 class="title mainH1"><a href="index.html">KLEIN BLUE</a></h1>
             <h2 class="title subH2">YVES KLEIN</h2>
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
                 <ul>
-                    <li data-image="images/mli1.jpeg"><a href="#">ARTIST</a></li>
+                    <li data-image="images/mli1.jpeg"><a href="artist.html">ARTIST</a></li>
                     <li data-image="images/mli2.jpeg"><a href="#">EXHIBITION</a></li>
                     <li data-image="images/mli3.jpeg"><a href="#">NEWS</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="mainImg2 R"></div>
             </div>
-            <div class="more"><span><a href="#">view more</a></span></div>
+            <div class="more"><span><a href="artist.html">view more</a></span></div>
                     <span class="down"><a href="#">
                         <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
                     </a>
@@ -133,7 +133,7 @@
                     </ul>
                 </div>
                 <nav class="footCbx">
-                    <div class="menu menu1"><a href="#">ARTIST</a></div>
+                    <div class="menu menu1"><a href="artist.html">ARTIST</a></div>
                     <div class="menu menu2"><a href="#">EXHIBITION</a></div>
                     <div class="menu menu3"><a href="#">NEWS</a></div>
                     <!-- <div class="menu menu4"><a href="#">made</a></div> -->
