--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -13,13 +13,13 @@
     <div class="wrapBox">
         <header class="header">
             <h1 class="title mainH1"><a href="index.html">KLEIN BLUE</a></h1>
-            <h2 class="title subH2">ARTIST</h2>
+            <h2 class="title subH2">ARTISTE</h2>
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
                 <ul>
-                    <li data-image="images/mli1.jpeg"><a href="#">ARTIST</a></li>
-                    <li data-image="images/mli2.jpeg"><a href="#">EXHIBITION</a></li>
-                    <li data-image="images/mli3.jpeg"><a href="#">NEWS</a></li>
+                    <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="#">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
@@ -29,9 +29,8 @@
             </nav>
         </header>
         <main class="art1">
-            <!-- <h1>The beginnings of blue</h1> -->
             <section class="aWrap">
-                <div class="yves">
+                <div class="yves col">
                     <img src="images/mbt3.JPG" alt="이브클랭 사진">
                 </div>
                 <div class="info">
@@ -51,6 +50,7 @@
                     </ul>
                 </div>
             </section>
+
             <section class="bWrap">
                 <p>
                     Yves Klein, né le 28 avril 1928 à Nice, avait pour première vocation d'être judoka. En 1954, il se tourne définitivement vers l'art et entame son « Aventure monochrome ».<br><br>
@@ -61,7 +61,6 @@
                     De ses monochromes, au vide, à la "technique des pinceaux vivants" ou "Anthropométrie", jusqu'à l'emploi des éléments de la nature afin de manifester leur force créatrice ou de l’or qu’il utilise comme un passage vers l’absolu, il a conçu une œuvre qui traverse les frontières de l'art conceptuel, corporel et du happening.<br><br>
                     Juste avant de mourir, Yves Klein confie à un ami : "Je vais entrer dans le plus grand atelier du monde. Et je n'y ferai que des œuvres immatérielles."<br><br>
                     Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
-
                 </p>
             </section>
         </main>
@@ -76,9 +75,9 @@
                     </ul>
                 </div>
                 <nav class="footCbx">
-                    <div class="menu menu1"><a href="#">ARTIST</a></div>
-                    <div class="menu menu2"><a href="#">EXHIBITION</a></div>
-                    <div class="menu menu3"><a href="#">NEWS</a></div>
+                    <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
+                    <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
+                    <div class="menu menu3"><a href="#">ARTICLE</a></div>
                     <!-- <div class="menu menu4"><a href="#">made</a></div> -->
                     <div class="menu menu4"><a href="index.html">EXIT</a></div>
                 </nav>
