--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KLEIN BLUE</title>
+    <title>KLEIN BLUE : MAIN</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -21,14 +21,14 @@
             <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
             <nav class="ham">
                 <ul>
-                    <li data-image="images/mli1.jpeg"><a href="artist.html">ARTIST</a></li>
-                    <li data-image="images/mli2.jpeg"><a href="#">EXHIBITION</a></li>
-                    <li data-image="images/mli3.jpeg"><a href="#">NEWS</a></li>
+                    <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="#">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
                 <div class="imgCont">
-                    <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
+                    <img src="images/mbt3.jpeg" alt="Yves Klein">
                 </div>
             </nav>
         </header>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="mainImg2 R"></div>
             </div>
-            <div class="more"><span><a href="artist.html">view more</a></span></div>
+            <div class="more"><span><a href="brtist.html">view more</a></span></div>
                     <span class="down"><a href="#">
                         <div class="imgWrap"><img src="images/scroll.png" alt="스크롤"></div>
                     </a>
@@ -133,9 +133,9 @@
                     </ul>
                 </div>
                 <nav class="footCbx">
-                    <div class="menu menu1"><a href="artist.html">ARTIST</a></div>
-                    <div class="menu menu2"><a href="#">EXHIBITION</a></div>
-                    <div class="menu menu3"><a href="#">NEWS</a></div>
+                    <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
+                    <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
+                    <div class="menu menu3"><a href="#">ARTICLE</a></div>
                     <!-- <div class="menu menu4"><a href="#">made</a></div> -->
                     <div class="menu menu4"><a href="outro.html">EXIT</a></div>
                 </nav>
