--- a/001.HTML/012.Blue_PJ/brtist.html
+++ b/001.HTML/012.Blue_PJ/brtist.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KLEIN BLUE : ARTIST</title>
+    <title>KLEIN BLUE : ŒUVRE</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/artist.css">
-    <script src="JS/mian.js"></script>
+    <script src="JS/main.js"></script>
 </head>
 <body>
     <div class="wrapBox">
@@ -37,7 +37,7 @@
                     <ul class="inT">
                         <li>
                             <em>NAME : </em><br>
-                            <i>Nu d'Iris Clert sortant de l'onde</i>
+                            <i>Monochrome bleu</i>
                         </li>
                         <li>
                             <em>RÉFÉRENCE : </em><br>
@@ -53,14 +53,12 @@
             </section>
             <section class="bWrap">
                 <p>
-                    Yves Klein, né le 28 avril 1928 à Nice, avait pour première vocation d'être judoka. En 1954, il se tourne définitivement vers l'art et entame son « Aventure monochrome ».<br><br>
-                    Animé par l’idée consistant à « libérer la couleur de la prison de la ligne », Yves Klein se tourne vers la monochromie car c’est pour lui la seule manière de peindre permettant de « voir ce que l’absolu avait de visible ».<br><br>
-                    Privilégiant l’expression de la sensibilité plus que la figuration dans la forme, Yves Klein va au-delà de toute représentation artistique et conçoit l'œuvre d'art comme la trace de la communication de l'artiste avec le monde. C'est la réalité invisible qui devient visible. Ses œuvres sont « les cendres de son art ».<br><br>
-                    L'œuvre d'Yves Klein révèle une conception nouvelle de la fonction de l'artiste. Selon lui, la beauté existe déjà, à l'état invisible. Sa tâche consiste à la saisir partout où elle est, dans l'air et dans la matière. Yves Klein a fait de sa vie tout entière une œuvre d’art : "L’art est partout où l’artiste arrive."<br><br>
-                    Dans sa quête d’immatérialité et d’infini, Yves Klein adopte le bleu outremer comme véhicule. De ce bleu plus que bleu, qu’il nommera « IKB » (International Klein Blue), irradie une vibration colorée qui n’engage pas seulement le regard du spectateur : c’est l’esprit qui voit avec les yeux.<br><br>
-                    De ses monochromes, au vide, à la "technique des pinceaux vivants" ou "Anthropométrie", jusqu'à l'emploi des éléments de la nature afin de manifester leur force créatrice ou de l’or qu’il utilise comme un passage vers l’absolu, il a conçu une œuvre qui traverse les frontières de l'art conceptuel, corporel et du happening.<br><br>
-                    Juste avant de mourir, Yves Klein confie à un ami : "Je vais entrer dans le plus grand atelier du monde. Et je n'y ferai que des œuvres immatérielles."<br><br>
-                    Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
+                    Klein famously declared the blue sky to be his first artwork and from there continued finding radical new ways to represent the infinite and immaterial in his works.<br><br>
+                    One such strategy was monochrome abstraction—the use of one color over an entire canvas.<br><br>
+                    Klein saw monochrome painting as an “open window to freedom, as the possibility of being immersed in the immeasurable existence of color.”<br><br>
+                    Although he used a range of colors, his most iconic works often featured International Klein Blue,<br><br>
+                    a shade of pure ultramarine that Klein claimed to have invented and trademarked.<br><br>
+                    He used materials like water, fire, and air to construct his works and staged a “leap into the void” for a self-published newspaper.
                 </p>
             </section>
             <section class="aWrap">
@@ -71,30 +69,23 @@
                     <ul class="inT">
                         <li>
                             <em>NAME : </em><br>
-                            <i>Nu d'Iris Clert sortant de l'onde</i>
+                            <i>"The Heartbeat of France"</i>
                         </li>
                         <li>
-                            <em>RÉFÉRENCE : </em><br>
-                            <i>IKB 120</i>
+                            <em>LIEU : </em><br>
+                            <i>Studio de Charles Wilp</i>
                         </li>
                         <li>
-                            <em>TECHNIQUE : </em><br>
-                            <i>Pigment pur et résine synthétique<br>
-                                 sur gaze montée sur panneau</i>
+                            <em>AUTEUR : </em><br>
+                            <i>Charles Wilp</i>
                         </li>
                     </ul>
                 </div>
             </section>
             <section class="bWrap">
                 <p>
-                    Yves Klein, né le 28 avril 1928 à Nice, avait pour première vocation d'être judoka. En 1954, il se tourne définitivement vers l'art et entame son « Aventure monochrome ».<br><br>
-                    Animé par l’idée consistant à « libérer la couleur de la prison de la ligne », Yves Klein se tourne vers la monochromie car c’est pour lui la seule manière de peindre permettant de « voir ce que l’absolu avait de visible ».<br><br>
-                    Privilégiant l’expression de la sensibilité plus que la figuration dans la forme, Yves Klein va au-delà de toute représentation artistique et conçoit l'œuvre d'art comme la trace de la communication de l'artiste avec le monde. C'est la réalité invisible qui devient visible. Ses œuvres sont « les cendres de son art ».<br><br>
-                    L'œuvre d'Yves Klein révèle une conception nouvelle de la fonction de l'artiste. Selon lui, la beauté existe déjà, à l'état invisible. Sa tâche consiste à la saisir partout où elle est, dans l'air et dans la matière. Yves Klein a fait de sa vie tout entière une œuvre d’art : "L’art est partout où l’artiste arrive."<br><br>
-                    Dans sa quête d’immatérialité et d’infini, Yves Klein adopte le bleu outremer comme véhicule. De ce bleu plus que bleu, qu’il nommera « IKB » (International Klein Blue), irradie une vibration colorée qui n’engage pas seulement le regard du spectateur : c’est l’esprit qui voit avec les yeux.<br><br>
-                    De ses monochromes, au vide, à la "technique des pinceaux vivants" ou "Anthropométrie", jusqu'à l'emploi des éléments de la nature afin de manifester leur force créatrice ou de l’or qu’il utilise comme un passage vers l’absolu, il a conçu une œuvre qui traverse les frontières de l'art conceptuel, corporel et du happening.<br><br>
-                    Juste avant de mourir, Yves Klein confie à un ami : "Je vais entrer dans le plus grand atelier du monde. Et je n'y ferai que des œuvres immatérielles."<br><br>
-                    Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
+                    Portrait d'Yves Klein réalisé à l'occasion du tournage de Peter Morley "The Heartbeat of France"<br>
+                    N.B. La photographie originale est en noir et blanc.
                 </p>
             </section>
             <section class="aWrap">
@@ -105,30 +96,27 @@
                     <ul class="inT">
                         <li>
                             <em>NAME : </em><br>
-                            <i>Nu d'Iris Clert sortant de l'onde</i>
+                            <i>Peinture de Feu sans titre</i>
                         </li>
                         <li>
                             <em>RÉFÉRENCE : </em><br>
-                            <i>IKB 120</i>
+                            <i>F 35</i>
                         </li>
                         <li>
                             <em>TECHNIQUE : </em><br>
-                            <i>Pigment pur et résine synthétique<br>
-                                 sur gaze montée sur panneau</i>
+                            <i>Carton brûlé</i>
                         </li>
                     </ul>
                 </div>
             </section>
             <section class="bWrap">
                 <p>
-                    Yves Klein, né le 28 avril 1928 à Nice, avait pour première vocation d'être judoka. En 1954, il se tourne définitivement vers l'art et entame son « Aventure monochrome ».<br><br>
-                    Animé par l’idée consistant à « libérer la couleur de la prison de la ligne », Yves Klein se tourne vers la monochromie car c’est pour lui la seule manière de peindre permettant de « voir ce que l’absolu avait de visible ».<br><br>
-                    Privilégiant l’expression de la sensibilité plus que la figuration dans la forme, Yves Klein va au-delà de toute représentation artistique et conçoit l'œuvre d'art comme la trace de la communication de l'artiste avec le monde. C'est la réalité invisible qui devient visible. Ses œuvres sont « les cendres de son art ».<br><br>
-                    L'œuvre d'Yves Klein révèle une conception nouvelle de la fonction de l'artiste. Selon lui, la beauté existe déjà, à l'état invisible. Sa tâche consiste à la saisir partout où elle est, dans l'air et dans la matière. Yves Klein a fait de sa vie tout entière une œuvre d’art : "L’art est partout où l’artiste arrive."<br><br>
-                    Dans sa quête d’immatérialité et d’infini, Yves Klein adopte le bleu outremer comme véhicule. De ce bleu plus que bleu, qu’il nommera « IKB » (International Klein Blue), irradie une vibration colorée qui n’engage pas seulement le regard du spectateur : c’est l’esprit qui voit avec les yeux.<br><br>
-                    De ses monochromes, au vide, à la "technique des pinceaux vivants" ou "Anthropométrie", jusqu'à l'emploi des éléments de la nature afin de manifester leur force créatrice ou de l’or qu’il utilise comme un passage vers l’absolu, il a conçu une œuvre qui traverse les frontières de l'art conceptuel, corporel et du happening.<br><br>
-                    Juste avant de mourir, Yves Klein confie à un ami : "Je vais entrer dans le plus grand atelier du monde. Et je n'y ferai que des œuvres immatérielles."<br><br>
-                    Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
+                    Le feu est pour moi l’avenir sans oublier le passé. Il est la mémoire de la nature. (...) Il est douceur, le feu « est douceur et torture. Il est cuisine et apocalypse.<br><br>
+                    Il est plaisir pour l’enfant assis sagement près du foyer ; il punit cependant de toute désobéissance quand on veut jouer de trop près avec ses flammes. Il est bien-être et respect.<br><br>
+                    C’est un dieu tutélaire et terrible, bon et mauvais. Il peut se contredire : il est donc un des principes d’explication universelle.<br><br>
+                    On n’a peut-être pas assez remarqué que le feu est plutôt un être social qu’un être naturel, et, pour voir le bien fondé de cette remarque, il n’est pas besoin de développer les considérations sur le rôle du feu dans les sociétés primitives ni d’insister sur les difficultés techniques de l’entretien du feu ; il suffit de faire de la psychologie positive, en examinant la structure et l’éducation d’un esprit civilisé. En bref, le respect du feu est un respect enseigné ; ce n’est pas un respect naturel.<br><br>
+                    Le réflexe qui nous fait retirer le doigt de la flamme d’une bougie ne joue pour ainsi dire aucun rôle conscient dans notre connaissance.» D’autre part, on ne peut, je pense, discuter du point de vue perfection esthétique la qualité du feu. Le feu est beau en soi, n’importe comment<br><br>
+                    Yves Klein, extrait de "Conférence de la Sorbonne », 3 juin 1959
                 </p>
             </section>
             <section class="aWrap">
@@ -139,30 +127,26 @@
                     <ul class="inT">
                         <li>
                             <em>NAME : </em><br>
-                            <i>Nu d'Iris Clert sortant de l'onde</i>
+                            <i>Les éléments et les couleurs</i>
                         </li>
                         <li>
-                            <em>RÉFÉRENCE : </em><br>
-                            <i>IKB 120</i>
+                            <em>ÉDITEUR : </em><br>
+                            <i>Arteos</i>
                         </li>
                         <li>
-                            <em>TECHNIQUE : </em><br>
-                            <i>Pigment pur et résine synthétique<br>
-                                 sur gaze montée sur panneau</i>
+                            <em>LIEU : </em><br>
+                            <i>Paris, France</i>
                         </li>
                     </ul>
                 </div>
             </section>
             <section class="bWrap">
                 <p>
-                    Yves Klein, né le 28 avril 1928 à Nice, avait pour première vocation d'être judoka. En 1954, il se tourne définitivement vers l'art et entame son « Aventure monochrome ».<br><br>
-                    Animé par l’idée consistant à « libérer la couleur de la prison de la ligne », Yves Klein se tourne vers la monochromie car c’est pour lui la seule manière de peindre permettant de « voir ce que l’absolu avait de visible ».<br><br>
-                    Privilégiant l’expression de la sensibilité plus que la figuration dans la forme, Yves Klein va au-delà de toute représentation artistique et conçoit l'œuvre d'art comme la trace de la communication de l'artiste avec le monde. C'est la réalité invisible qui devient visible. Ses œuvres sont « les cendres de son art ».<br><br>
-                    L'œuvre d'Yves Klein révèle une conception nouvelle de la fonction de l'artiste. Selon lui, la beauté existe déjà, à l'état invisible. Sa tâche consiste à la saisir partout où elle est, dans l'air et dans la matière. Yves Klein a fait de sa vie tout entière une œuvre d’art : "L’art est partout où l’artiste arrive."<br><br>
-                    Dans sa quête d’immatérialité et d’infini, Yves Klein adopte le bleu outremer comme véhicule. De ce bleu plus que bleu, qu’il nommera « IKB » (International Klein Blue), irradie une vibration colorée qui n’engage pas seulement le regard du spectateur : c’est l’esprit qui voit avec les yeux.<br><br>
-                    De ses monochromes, au vide, à la "technique des pinceaux vivants" ou "Anthropométrie", jusqu'à l'emploi des éléments de la nature afin de manifester leur force créatrice ou de l’or qu’il utilise comme un passage vers l’absolu, il a conçu une œuvre qui traverse les frontières de l'art conceptuel, corporel et du happening.<br><br>
-                    Juste avant de mourir, Yves Klein confie à un ami : "Je vais entrer dans le plus grand atelier du monde. Et je n'y ferai que des œuvres immatérielles."<br><br>
-                    Entre mai 1954 et le 6 juin 1962, date de sa mort, Yves Klein aura brûlé sa vie pour réaliser une œuvre flamboyante qui a marqué son époque et qui rayonne encore aujourd’hui.
+                    Tel un météore de lumière, Yves Klein n'a cessé de poursuivre "la trace de l'immédiat dans les objets naturels, quelle qu'en soit l'incidence" comme il l'écrivait en 1961 dans le Manifeste de l'Hôtel Chelsea.<br><br>
+                    "Peintre de l'espace" et "explorateur du vide", il a fait de l'utopie l'un des fondements de son art. Pour lui, les quatre éléments que sont la terre, l'eau, l'air et le feu sont des sources essentielles de l'art et la couleur en est le révélateur.<br><br>
+                    Ce livre, réunit les Cosmogonies, les Feux, les Feux Couleurs, les Reliefs Planétaires, les Monochromes, l'Architecture de l'air et les œuvres immatérielles.<br><br>
+                    À la lumière des écrits de l'artiste, il présente la pensée d"Yves le Monochrome"<br>
+                    qui en renouant avec les concepts antiques de nature et de cosmos réalise le "vieux rêves des hommes et de l'imagination de jouer avec les éléments de la nature, de diriger et de contrôler leurs phénomènes et manifestations".
                 </p>
             </section>
         </main>
