--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -160,7 +160,7 @@
         </footer>
     </div>
     
-    <script src="JS/mian.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
