--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KLEIN BLUE : ARTIST</title>
+    <title>KLEIN BLUE : ARTISTE</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/artist.css">
-    <script src="JS/mian.js"></script>
+    <script src="JS/main.js"></script>
 </head>
 <body>
     <div class="wrapBox">
