--- a/001.HTML/012.Blue_PJ/index.html
+++ b/001.HTML/012.Blue_PJ/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLEIN BLUE : MAIN</title>
+    <link rel="shortcut icon" href="images/jump.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -23,7 +24,7 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
-                    <li data-image="images/mli3.jpeg"><a href="#">ARTICLE</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
@@ -135,7 +136,7 @@
                 <nav class="footCbx">
                     <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
                     <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
-                    <div class="menu menu3"><a href="#">ARTICLE</a></div>
+                    <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
                     <!-- <div class="menu menu4"><a href="#">made</a></div> -->
                     <div class="menu menu4"><a href="outro.html">EXIT</a></div>
                 </nav>
