--- a/001.HTML/012.Blue_PJ/artist.html
+++ b/001.HTML/012.Blue_PJ/artist.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLEIN BLUE : ARTISTE</title>
+    <link rel="shortcut icon" href="images/jump.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/artist.css">
@@ -19,7 +20,7 @@
                 <ul>
                     <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
                     <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
-                    <li data-image="images/mli3.jpeg"><a href="#">ARTICLE</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
                     <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
                     <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
                 </ul>
@@ -33,7 +34,7 @@
                 <div class="yves col">
                     <img src="images/mbt3.JPG" alt="이브클랭 사진">
                 </div>
-                <div class="info">
+                <article class="info">
                     <ul class="inT">
                         <li>
                             <em>NAME : </em><br>
@@ -48,7 +49,7 @@
                             <i>1928.04.28 ~ 1962.06.06</i>
                         </li>
                     </ul>
-                </div>
+                </article>
             </section>
 
             <section class="bWrap">
@@ -77,7 +78,7 @@
                 <nav class="footCbx">
                     <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
                     <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
-                    <div class="menu menu3"><a href="#">ARTICLE</a></div>
+                    <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
                     <!-- <div class="menu menu4"><a href="#">made</a></div> -->
                     <div class="menu menu4"><a href="index.html">EXIT</a></div>
                 </nav>
