--- a/001.HTML/012.Blue_PJ/crtist.html
+++ b/001.HTML/012.Blue_PJ/crtist.html
@@ -4,12 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLEIN BLUE : ARTICLE</title>
+    <link rel="shortcut icon" href="images/jump.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/artist.css">
     <script src="JS/main.js"></script>
 </head>
 <body>
-    
+    <div class="wrapBox">
+        <header class="header">
+            <h1 class="title mainH1"><a href="index.html">KLEIN BLUE</a></h1>
+            <h2 class="title subH2">ARTICLE</h2>
+            <div class="menuBtn"><img src="images/menubar.png" alt="매뉴바"></div>
+            <nav class="ham">
+                <ul>
+                    <li data-image="images/mli1.jpeg"><a href="artist.html">ARTISTE</a></li>
+                    <li data-image="images/mli2.jpeg"><a href="brtist.html">ŒUVRE</a></li>
+                    <li data-image="images/mli3.jpeg"><a href="crtist.html">ARTICLE</a></li>
+                    <li data-image="images/exit.jpeg"><a href="#" id="close">CLOSE</a></li>
+                    <li data-image="images/mli4.jpeg"><a href="outro.html" class="rd">EXIT</a></li>
+                </ul>
+                <div class="imgCont">
+                    <!-- <img src="images/mbt3.jpeg" alt="Yves Klein"> -->
+                </div>
+            </nav>
+        </header>
+        <main class="article">
+            <article class="info">
+                
+            </article>
+        </main>
+
+        <footer class="footer">
+            <div class="footInfo">
+                <div class="footLbx">
+                    <ul>
+                        <li><span>LANGUAGE : </span><button type="button">FRANÇAIS</button></li>
+                        <li>CREATED BY <i>BOSEONG KANG</i></li>
+                        <li>CONTACT : 010-3362-1793</li>
+                    </ul>
+                </div>
+                <nav class="footCbx">
+                    <div class="menu menu1"><a href="artist.html">ARTISTE</a></div>
+                    <div class="menu menu2"><a href="brtist.html">ŒUVRE</a></div>
+                    <div class="menu menu3"><a href="crtist.html">ARTICLE</a></div>
+                    <!-- <div class="menu menu4"><a href="#">made</a></div> -->
+                    <div class="menu menu4"><a href="index.html">EXIT</a></div>
+                </nav>
+                <div class="footRbx">
+                    <div class="snsWrap">
+                        <div class="snsTit">FOLLOW US</div>
+                        <div class="sns">
+                            <div class="insta"><a href="#">instagram</a></div>
+                            <div class="faceb"><a href="#">facebook</a></div>
+                            <div class="yutub"><a href="#">youtube</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <ul>
+                    <li>RETOUCHED PHOTOGRAPHS</li>
+                    <li>COPYRIGHT 2023-2024 AMERICAN VINTAGE</li>
+                    <li>ALL RIGHTS RESERVED</li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
