--- a/001.HTML/012.Blue_PJ/outro.html
+++ b/001.HTML/012.Blue_PJ/outro.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KLEIN BLUE : EXIT</title>
+    <link rel="shortcut icon" href="images/jump.png" type="image/x-icon">
     <link rel="stylesheet" href="css/outro.css">
 </head>
 
